# WSEngine

./: CMakeLists.txt  LICENSE  README.md
WSEngine/include/: WSEngine.h
WSEngine/include/Core/: Log.h
WSEngine/include/component/: Camera.h  Light.h  MeshRender.h  Transform.h
WSEngine/include/core/: Material.h  RenderTexture.h  ShaderClass.h  Texture.h
WSEngine/include/utils/: EntityManager.h  FPS.h  GeometryGenerator.h  GeometryGenetor.h  RenderManager.h  ResourcesManager.h
assets/: bloomHBlurFrag.txt  bloomPreFrag.txt  bloomVBlurFrag.txt  emissionFrag.txt  house.fbx  house_light.fbx  mask.fbx  mask.tga  monkey.fbx  pbrFrag.txt  pbrVert.txt  quadFrag.txt  skyboxFrag.txt  skyboxVert.txt
assets/shader/: NormalDepthFrag.txt  NormalDepthVert.txt  bloomHBlurFrag.txt  bloomMergeFrag.txt  bloomVBlurFrag.txt  bloomVert.txt  pbrFrag.txt  pbrVert.txt  quadFrag.txt  shadowmapFrag.txt  shadowmapVert.txt  skyboxFrag.txt
include/: Component.h  System.h  WSEngine.h
include/component/: Camera.h  Light.h  Particle.h  Transform.h
include/core/: Component.h  Entity.h  LightSetting.h  Material.h  Mesh.h  RenderTexture.h  ShaderClass.h  Texture.h
include/utils/: EntityManager.h  GeometryGenerator.h  GlobalLog.h  RenderManager.h  ResourcesManager.h
install/include/: Entity.h  Game.h
install/include/glad/: glad.h
src/: Camera.h  GlobalLog.h  Light.h  Main.cpp  Material.h  Mesh.h  MeshRender.h  ShaderClass.h  Texture.h  Transform.h  WSEngine.cpp  glad.c
src/Shader/: frag.txt  vert.txt
src/back/: Camera.cpp  Camera.h
src/component/: Camera.cpp  MeshRender.cpp  Transform.cpp
src/core/: Log.cpp  Material.cpp  Mesh.cpp  ShaderClass.cpp
src/utils/: FPS.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
